Creato con Colab

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPyvfLCTfttl5l4H0mEWC23",
+      "authorship_tag": "ABX9TyPPTQeqk2gx8Oj8IBTL5rj/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "# Installazione librerie (se mancano)\n",
+        "!pip install -q flwr tensorflow pandas numpy scipy scikit-learn\n",
+        "\n",
+        "import os\n",
+        "import zipfile\n",
+        "\n",
+        "# Decomprimiamo il file di training se non esiste già la cartella\n",
+        "if not os.path.exists(\"CSV_train\") and os.path.exists(\"CSV_train.zip\"):\n",
+        "    print(\"Decompressione CSV_train.zip in corso...\")\n",
+        "    with zipfile.ZipFile(\"CSV_train.zip\", 'r') as zip_ref:\n",
+        "        zip_ref.extractall(\"CSV_train\")\n",
+        "    print(\"Fatto!\")\n",
+        "elif not os.path.exists(\"CSV_train.zip\"):\n",
+        "    print(\"ATTENZIONE: Carica il file 'CSV_train.zip' su Colab!\")\n",
+        "else:\n",
+        "    print(\"Cartella CSV_train già presente.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pGpZiPJgyhIB",
+        "outputId": "3ff28ec0-a848-4862-fb01-2813366e9050"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cartella CSV_train già presente.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
       "metadata": {
         "id": "lIHO5InzaI5Q",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f134fae9-d01e-4905-bed9-d4c60fb02ebb"
+        "outputId": "59629eb4-e5b2-47c0-b165-058e18eeda0c"
       },
       "outputs": [
         {
@@ -46,7 +84,6 @@
         }
       ],
       "source": [
-        "import os\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import ast\n",
@@ -176,12 +213,12 @@
       ],
       "metadata": {
         "id": "3AVr1twqsd0O",
-        "outputId": "d1551d1b-4025-481f-e398-61c550787f52",
+        "outputId": "cab66e6b-0705-49c1-c4bd-6f022da6630c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,54 +232,54 @@
     {
       "cell_type": "code",
       "source": [
+        "# --- CELLA 4: FEDERATED LEARNING (CORRETTA) ---\n",
+        "import os\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.model_selection import train_test_split  # <--- ECCO L'IMPORT CHE MANCAVA\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from tensorflow.keras import callbacks\n",
+        "\n",
         "# --- CONFIGURAZIONE ---\n",
         "TRAIN_ROOT = \"CSV_train\"\n",
         "ROUNDS = 15\n",
         "EPOCHS_PER_CLIENT = 3\n",
         "BATCH_SIZE = 16\n",
         "\n",
-        "def run_federated_learning_grouped():\n",
-        "    # 1. Identificazione dei Client (Sottocartelle)\n",
-        "    # Cerca tutte le cartelle dentro CSV_train (es. CSV_train/Group_1)\n",
-        "    # Se CSV_train contiene direttamente i csv, adattiamo la logica,\n",
-        "    # ma assumiamo la struttura a sottocartelle descritta.\n",
-        "\n",
-        "    # Trova le sottocartelle\n",
-        "    subfolders = [f.path for f in os.scandir(TRAIN_ROOT) if f.is_dir()]\n",
-        "\n",
-        "    # Se non ci sono sottocartelle, prova a vedere se c'è un livello intermedio\n",
-        "    # (A volte gli zip creano CSV_train/CSV_train/...)\n",
-        "    if not subfolders:\n",
-        "        # Fallback: trattiamo la cartella root come un unico client se non ci sono gruppi\n",
-        "        # Ma l'obiettivo è avere più gruppi.\n",
-        "        print(\"Nessuna sottocartella trovata direttamente. Controllo ricorsivo...\")\n",
-        "        # Logica semplice: ogni cartella che contiene csv è un client\n",
-        "        client_folders = []\n",
-        "        for root, dirs, files in os.walk(TRAIN_ROOT):\n",
-        "            csv_files = [f for f in files if f.endswith('.csv')]\n",
-        "            if len(csv_files) > 0:\n",
-        "                client_folders.append(root)\n",
-        "    else:\n",
-        "        client_folders = subfolders\n",
-        "\n",
-        "    print(f\"Trovati {len(client_folders)} Client (Gruppi):\")\n",
-        "    for c in client_folders: print(f\" - {os.path.basename(c)}\")\n",
+        "def run_federated_learning_smart():\n",
+        "    # 1. SCOPERTA AUTOMATICA DEI GRUPPI (CLIENT)\n",
+        "    client_folders = []\n",
+        "    for root, dirs, files in os.walk(TRAIN_ROOT):\n",
+        "        csv_files = [f for f in files if f.endswith('.csv') and 'train' in f]\n",
+        "        if len(csv_files) > 0:\n",
+        "            client_folders.append(root)\n",
         "\n",
         "    if not client_folders:\n",
-        "        print(\"ERRORE CRITICO: Nessun dato trovato.\")\n",
+        "        print(\"❌ ERRORE: Nessun file .csv di training trovato! Verifica il file zip.\")\n",
         "        return None, None\n",
         "\n",
-        "    # 2. Inizializzazione Modello Globale\n",
-        "    # Leggiamo un file a caso per le dimensioni\n",
-        "    first_csv = [f for f in os.listdir(client_folders[0]) if f.endswith('.csv')][0]\n",
-        "    sample_df = pd.read_csv(os.path.join(client_folders[0], first_csv), sep=';')\n",
+        "    print(f\"✅ Trovati {len(client_folders)} Gruppi/Client:\")\n",
+        "    for c in client_folders:\n",
+        "        n_files = len([f for f in os.listdir(c) if f.endswith('.csv')])\n",
+        "        print(f\"   - {c} ({n_files} file csv)\")\n",
+        "\n",
+        "    # 2. INIZIALIZZAZIONE MODELLO GLOBALE\n",
+        "    # Usiamo il primo file trovato per capire quante feature abbiamo\n",
+        "    first_folder = client_folders[0]\n",
+        "    first_csv = [f for f in os.listdir(first_folder) if f.endswith('.csv')][0]\n",
+        "\n",
+        "    print(\"\\nAnalisi dimensioni input...\")\n",
+        "    sample_df = pd.read_csv(os.path.join(first_folder, first_csv), sep=';')\n",
+        "    # Nota: process_dataframe deve essere stata definita nella Cella 2\n",
         "    sample_X = process_dataframe(sample_df.head(5))\n",
         "    input_dim = sample_X.shape[1]\n",
+        "    print(f\"Dimensioni Feature Input: {input_dim}\")\n",
         "\n",
-        "    global_model = get_model(input_dim)\n",
+        "    global_model = get_model(input_dim) # Nota: get_model deve essere definita nella Cella 3\n",
         "    global_weights = global_model.get_weights()\n",
         "\n",
         "    # --- LOOP FEDERATO ---\n",
+        "    print(\"\\nInizio Training Federato...\")\n",
         "    for round_num in range(ROUNDS):\n",
         "        print(f\"\\n--- Round {round_num + 1}/{ROUNDS} ---\")\n",
         "        local_weights_list = []\n",
@@ -250,37 +287,44 @@
         "\n",
         "        for client_folder in client_folders:\n",
         "            try:\n",
-        "                # A. AGGREGAZIONE DATI DEL GRUPPO (CLIENT)\n",
-        "                # Uniamo tutti i CSV di questo gruppo in un unico DataFrame\n",
+        "                # A. CARICAMENTO DATI GRUPPO\n",
         "                group_csvs = [os.path.join(client_folder, f) for f in os.listdir(client_folder) if f.endswith('.csv')]\n",
         "\n",
         "                df_list = []\n",
-        "                for csv_file in group_csvs:\n",
-        "                    df_temp = pd.read_csv(csv_file, sep=';')\n",
-        "                    df_list.append(df_temp)\n",
+        "                for csv_path in group_csvs:\n",
+        "                    try:\n",
+        "                        df_temp = pd.read_csv(csv_path, sep=';')\n",
+        "                        df_list.append(df_temp)\n",
+        "                    except:\n",
+        "                        pass\n",
         "\n",
         "                if not df_list: continue\n",
         "\n",
+        "                # Unisce i dati di tutti gli utenti del gruppo\n",
         "                df_client = pd.concat(df_list, ignore_index=True)\n",
         "\n",
         "                # B. PREPROCESSING\n",
-        "                X_client_extracted = process_dataframe(df_client)\n",
+        "                X_client = process_dataframe(df_client)\n",
+        "                if 'label' not in df_client.columns: continue\n",
         "                y_client = df_client['label'].values\n",
         "\n",
-        "                # C. SPLIT TRAIN / VALIDATION (Locale al client)\n",
-        "                # Parte dei dati usata per il training, parte per validare\n",
-        "                X_train, X_val, y_train, y_val = train_test_split(X_client_extracted, y_client, test_size=0.2, random_state=42)\n",
+        "                # C. SPLIT TRAIN/VAL LOCALE\n",
+        "                # Se abbiamo pochi dati, saltiamo questo client per evitare errori\n",
+        "                if len(X_client) < 10:\n",
+        "                    continue\n",
+        "\n",
+        "                # *** QUI SI VERIFICAVA L'ERRORE ***\n",
+        "                X_train, X_val, y_train, y_val = train_test_split(X_client, y_client, test_size=0.2, random_state=42)\n",
         "\n",
         "                # D. NORMALIZZAZIONE (StandardScaler Locale)\n",
         "                scaler = StandardScaler()\n",
         "                X_train_scaled = scaler.fit_transform(X_train)\n",
-        "                X_val_scaled = scaler.transform(X_val) # Usa lo scaler del train\n",
+        "                X_val_scaled = scaler.transform(X_val)\n",
         "\n",
         "                # E. TRAINING LOCALE\n",
         "                client_model = get_model(input_dim)\n",
         "                client_model.set_weights(global_weights)\n",
         "\n",
-        "                # Early Stopping sulla Validation Loss locale\n",
         "                es = callbacks.EarlyStopping(monitor='val_loss', patience=2, restore_best_weights=True)\n",
         "\n",
         "                history = client_model.fit(\n",
@@ -292,17 +336,13 @@
         "                    callbacks=[es]\n",
         "                )\n",
         "\n",
-        "                # Salviamo i pesi e la loss finale\n",
         "                local_weights_list.append(client_model.get_weights())\n",
-        "                val_loss = history.history['val_loss'][-1]\n",
-        "                local_losses.append(val_loss)\n",
-        "\n",
-        "                # print(f\"   Client {os.path.basename(client_folder)} -> Val Loss: {val_loss:.2f}\")\n",
+        "                local_losses.append(history.history['val_loss'][-1])\n",
         "\n",
         "            except Exception as e:\n",
-        "                print(f\"   Errore Client {os.path.basename(client_folder)}: {e}\")\n",
+        "                print(f\"   Errore nel gruppo {os.path.basename(client_folder)}: {e}\")\n",
         "\n",
-        "        # F. AGGREGAZIONE (FedAvg)\n",
+        "        # F. AGGREGAZIONE (FEDAVG)\n",
         "        if local_weights_list:\n",
         "            avg_weights = []\n",
         "            for layer_idx in range(len(global_weights)):\n",
@@ -313,33 +353,88 @@
         "            global_model.set_weights(global_weights)\n",
         "\n",
         "            avg_loss = np.mean(local_losses)\n",
-        "            print(f\"   >>> Round completato. Avg Global Validation Loss: {avg_loss:.2f}\")\n",
+        "            print(f\"   >>> Loss di Validazione Media (Global): {avg_loss:.2f}\")\n",
+        "        else:\n",
+        "            print(\"   Nessun client ha completato il training in questo round.\")\n",
         "\n",
-        "    return global_model, input_dim\n",
+        "    return global_model\n",
         "\n",
-        "# AVVIO\n",
-        "final_model, feature_dim = run_federated_learning_grouped()"
+        "# ESECUZIONE\n",
+        "final_model = run_federated_learning_smart()"
       ],
       "metadata": {
-        "id": "HIlvq3iZtofL",
-        "outputId": "186c6eb9-d538-4dcd-8db9-e84791c8e175",
+        "id": "QRj9fLjV0ljc",
+        "outputId": "db37ff02-cda1-4185-aaf9-41a0981885ed",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 303
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 23,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'os' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1990760183.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    122\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    123\u001b[0m \u001b[0;31m# AVVIO\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 124\u001b[0;31m \u001b[0mfinal_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeature_dim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrun_federated_learning_grouped\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/tmp/ipython-input-1990760183.py\u001b[0m in \u001b[0;36mrun_federated_learning_grouped\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;31m# Trova le sottocartelle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0msubfolders\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscandir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTRAIN_ROOT\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_dir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m# Se non ci sono sottocartelle, prova a vedere se c'è un livello intermedio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Trovati 9 Gruppi/Client:\n",
+            "   - CSV_train/CSV_train/group1 (5 file csv)\n",
+            "   - CSV_train/CSV_train/group3 (5 file csv)\n",
+            "   - CSV_train/CSV_train/group4 (5 file csv)\n",
+            "   - CSV_train/CSV_train/group2 (5 file csv)\n",
+            "   - CSV_train/CSV_train/group0 (5 file csv)\n",
+            "   - CSV_train/CSV_train/group6 (5 file csv)\n",
+            "   - CSV_train/CSV_train/group7 (5 file csv)\n",
+            "   - CSV_train/CSV_train/group5 (5 file csv)\n",
+            "   - CSV_train/CSV_train/group8 (5 file csv)\n",
+            "\n",
+            "Analisi dimensioni input...\n",
+            "Dimensioni Feature Input: 18\n",
+            "\n",
+            "Inizio Training Federato...\n",
+            "\n",
+            "--- Round 1/15 ---\n",
+            "   >>> Loss di Validazione Media (Global): 5786.79\n",
+            "\n",
+            "--- Round 2/15 ---\n",
+            "   >>> Loss di Validazione Media (Global): 5197.73\n",
+            "\n",
+            "--- Round 3/15 ---\n",
+            "   >>> Loss di Validazione Media (Global): 4049.89\n",
+            "\n",
+            "--- Round 4/15 ---\n",
+            "   >>> Loss di Validazione Media (Global): 2427.88\n",
+            "\n",
+            "--- Round 5/15 ---\n",
+            "   >>> Loss di Validazione Media (Global): 1304.96\n",
+            "\n",
+            "--- Round 6/15 ---\n",
+            "   >>> Loss di Validazione Media (Global): 974.91\n",
+            "\n",
+            "--- Round 7/15 ---\n",
+            "   >>> Loss di Validazione Media (Global): 857.84\n",
+            "\n",
+            "--- Round 8/15 ---\n",
+            "   >>> Loss di Validazione Media (Global): 815.10\n",
+            "\n",
+            "--- Round 9/15 ---\n",
+            "   >>> Loss di Validazione Media (Global): 741.84\n",
+            "\n",
+            "--- Round 10/15 ---\n",
+            "   >>> Loss di Validazione Media (Global): 720.75\n",
+            "\n",
+            "--- Round 11/15 ---\n",
+            "   >>> Loss di Validazione Media (Global): 680.79\n",
+            "\n",
+            "--- Round 12/15 ---\n",
+            "   >>> Loss di Validazione Media (Global): 672.67\n",
+            "\n",
+            "--- Round 13/15 ---\n",
+            "   >>> Loss di Validazione Media (Global): 632.00\n",
+            "\n",
+            "--- Round 14/15 ---\n",
+            "   >>> Loss di Validazione Media (Global): 621.33\n",
+            "\n",
+            "--- Round 15/15 ---\n",
+            "   >>> Loss di Validazione Media (Global): 616.29\n"
           ]
         }
       ]
@@ -374,10 +469,31 @@
         "    print(\"Training fallito, nessun modello generato.\")"
       ],
       "metadata": {
-        "id": "jnYY55Sotrga"
+        "id": "jnYY55Sotrga",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "02e31a80-638e-457a-e269-995e832fd35a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Generazione predizioni per x_test.csv...\n",
+            "\u001b[1m6/6\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 18ms/step\n",
+            "File 'submission.csv' pronto per il download!\n",
+            "   id      label\n",
+            "0   0  84.308388\n",
+            "1   1  72.784363\n",
+            "2   2  72.416115\n",
+            "3   3  77.850410\n",
+            "4   4  75.255302\n"
+          ]
+        }
+      ]
     }
   ]
 }
