Creato con Colab

--- a/data_processing2.ipynb
+++ b/data_processing2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMF6Bn7+bC0VRISlGqJ84Ac",
+      "authorship_tag": "ABX9TyNOIxSeClcoUOrXzgc15yYa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "# Installazione librerie (se mancano)\n",
+        "!pip install -q flwr tensorflow pandas numpy scipy scikit-learn\n",
+        "\n",
+        "import os\n",
+        "import zipfile\n",
+        "\n",
+        "# Decomprimiamo il file di training se non esiste già la cartella\n",
+        "if not os.path.exists(\"CSV_train\") and os.path.exists(\"CSV_train.zip\"):\n",
+        "    print(\"Decompressione CSV_train.zip in corso...\")\n",
+        "    with zipfile.ZipFile(\"CSV_train.zip\", 'r') as zip_ref:\n",
+        "        zip_ref.extractall(\"CSV_train\")\n",
+        "    print(\"Fatto!\")\n",
+        "elif not os.path.exists(\"CSV_train.zip\"):\n",
+        "    print(\"ATTENZIONE: Carica il file 'CSV_train.zip' su Colab!\")\n",
+        "else:\n",
+        "    print(\"Cartella CSV_train già presente.\")\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "7MCAbe3r2qpq"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aWMS2Wmc369l",
+        "outputId": "eaff5aa3-44f6-452e-ec94-66b76e7ec917"
       },
-      "outputs": [],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cartella CSV_train già presente.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "###############################################################################\n",
         "#                                                                             #\n",
@@ -69,9 +103,17 @@
         "NUM_CLASSES = 7          # Classi sleep quality (0-6)\n",
         "BATCH_SIZE = 128\n",
         "LOCAL_EPOCHS = 5         # Epoch per training locale\n",
-        "FEDERATED_ROUNDS = 10    # Round di aggregazione\n",
-        "\n",
-        "\n",
+        "FEDERATED_ROUNDS = 10    # Round di aggregazione\n"
+      ],
+      "metadata": {
+        "id": "ZH5rUe5b4KUR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "###############################################################################\n",
         "#                                                                             #\n",
         "#                        FASE 1: DATA CLEANING                                #\n",
@@ -159,9 +201,31 @@
         "            groups.append(pd.concat(group_data, ignore_index=True))\n",
         "            print(f\"  ✅ Gruppo {group_id}: {len(group_data)} users, {groups[-1].shape[0]} samples\")\n",
         "\n",
-        "    return groups\n",
-        "\n",
-        "\n",
+        "    return groups\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eR9Oo7Bh4akW",
+        "outputId": "f57d88e4-4c3b-4a7e-fa05-86337e3f6443"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "================================================================================\n",
+            "FASE 1: DATA CLEANING & PREPROCESSING\n",
+            "================================================================================\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "###############################################################################\n",
         "#                                                                             #\n",
         "#                  FASE 2: FEATURE ENGINEERING (WINDOWING)                    #\n",
@@ -235,8 +299,17 @@
         "        return X, Y, mean, std\n",
         "    else:\n",
         "        return X, mean, std\n",
-        "\n",
-        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "9YG313pE4geU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "###############################################################################\n",
         "#                                                                             #\n",
         "#                       FASE 3: ARCHITETTURA LSTM                             #\n",
@@ -283,7 +356,17 @@
         "        metrics=['accuracy']\n",
         "    )\n",
         "\n",
-        "    return model\n",
+        "    return model\n"
+      ],
+      "metadata": {
+        "id": "YzfPZAGv4kii"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
         "\n",
         "###############################################################################\n",
@@ -373,7 +456,22 @@
         "        print(f\"  📈 Global Test Acc: {accuracy:.2%}\")\n",
         "\n",
         "    return global_model\n",
-        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "jhrCYifF4qBz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7MCAbe3r2qpq"
+      },
+      "outputs": [],
+      "source": [
         "\n",
         "###############################################################################\n",
         "#                                                                             #\n",
@@ -450,7 +548,12 @@
         "\n",
         "    return submission_df\n",
         "\n",
-        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "###############################################################################\n",
         "#                                                                             #\n",
         "#                              MAIN EXECUTION                                 #\n",
@@ -502,6 +605,66 @@
         "    print(\"   - submission.csv (PRINCIPALE)\")\n",
         "    print(\"   - federated_lstm_sleep.keras\")\n",
         "    print(\"=\"*80)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 444
+        },
+        "id": "-g3Vs3PA4x9m",
+        "outputId": "4bcf022a-24f5-4055-adcd-9c27ac16225b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🚀 AVVIO FEDERATED LEARNING PER SLEEP QUALITY\n",
+            "\n",
+            "🔄 Caricamento 9 gruppi...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Gruppi: 100%|██████████| 9/9 [00:00<00:00, 13588.46it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  ⚠️  Gruppo 1: nessun file trovato\n",
+            "  ⚠️  Gruppo 2: nessun file trovato\n",
+            "  ⚠️  Gruppo 3: nessun file trovato\n",
+            "  ⚠️  Gruppo 4: nessun file trovato\n",
+            "  ⚠️  Gruppo 5: nessun file trovato\n",
+            "  ⚠️  Gruppo 6: nessun file trovato\n",
+            "  ⚠️  Gruppo 7: nessun file trovato\n",
+            "  ⚠️  Gruppo 8: nessun file trovato\n",
+            "  ⚠️  Gruppo 9: nessun file trovato\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "❌ Nessun gruppo caricato! Verifica CSV_train/",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1358521512.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mfederated_groups\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"❌ Nessun gruppo caricato! Verifica CSV_train/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"\\n✅ {len(federated_groups)} gruppi pronti per Federated Learning\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: ❌ Nessun gruppo caricato! Verifica CSV_train/"
+          ]
+        }
       ]
     }
   ]
