Creato con Colab

--- a/data_processing3.ipynb
+++ b/data_processing3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJQcmn3oxykv1El55koV8n",
+      "authorship_tag": "ABX9TyNPmhrHSB/fc3v+aPG69O4k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
       "source": [
         "# Installazione librerie (se mancano)\n",
         "!pip install -q flwr tensorflow pandas numpy scipy scikit-learn\n",
-        "\n",
+        "#ddddd\n",
         "import os\n",
         "import zipfile\n",
         "\n",
@@ -54,7 +54,7 @@
         "id": "aWMS2Wmc369l",
         "outputId": "85fb61f0-b76e-4bbd-e6f1-9b52f1dee37d"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,7 +117,7 @@
       "metadata": {
         "id": "ZH5rUe5b4KUR"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -219,7 +219,7 @@
         "id": "eR9Oo7Bh4akW",
         "outputId": "e4a9bad8-9340-4f25-fec3-664f66c4f015"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +313,7 @@
       "metadata": {
         "id": "9YG313pE4geU"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -370,7 +370,7 @@
       "metadata": {
         "id": "YzfPZAGv4kii"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -470,12 +470,12 @@
       "metadata": {
         "id": "jhrCYifF4qBz"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "7MCAbe3r2qpq"
       },
@@ -623,7 +623,7 @@
         "id": "-g3Vs3PA4x9m",
         "outputId": "84c9c9c4-7de4-4623-f0f5-5c349bcba1b5"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
