Creato con Colab

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPTQeqk2gx8Oj8IBTL5rj/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,9 +30,13 @@
       "source": [
         "# Installazione librerie (se mancano)\n",
         "!pip install -q flwr tensorflow pandas numpy scipy scikit-learn\n",
-        "\n",
+        "!pip install -q \"cryptography>=44.0.1,<45.0.0\"\n",
         "import os\n",
         "import zipfile\n",
+        "import flwr as fl\n",
+        "import tensorflow as tf\n",
+        "print(\"Flower OK:\", fl.__version__)\n",
+        "print(\"TensorFlow OK:\", tf.__version__)\n",
         "\n",
         "# Decomprimiamo il file di training se non esiste già la cartella\n",
         "if not os.path.exists(\"CSV_train\") and os.path.exists(\"CSV_train.zip\"):\n",
@@ -51,14 +54,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pGpZiPJgyhIB",
-        "outputId": "3ff28ec0-a848-4862-fb01-2813366e9050"
+        "outputId": "e2eb5322-f79a-4f13-9c8f-04563582814b"
       },
-      "execution_count": 20,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Flower OK: 1.25.0\n",
+            "TensorFlow OK: 2.19.0\n",
             "Cartella CSV_train già presente.\n"
           ]
         }
@@ -66,13 +71,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 2,
       "metadata": {
         "id": "lIHO5InzaI5Q",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "59629eb4-e5b2-47c0-b165-058e18eeda0c"
+        "outputId": "e1b44a6a-fbc6-4983-9045-a10ab6ebbc26"
       },
       "outputs": [
         {
@@ -213,12 +218,12 @@
       ],
       "metadata": {
         "id": "3AVr1twqsd0O",
-        "outputId": "cab66e6b-0705-49c1-c4bd-6f022da6630c",
+        "outputId": "368a470c-3021-4538-c127-b1256555b2e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,27 +369,27 @@
       ],
       "metadata": {
         "id": "QRj9fLjV0ljc",
-        "outputId": "db37ff02-cda1-4185-aaf9-41a0981885ed",
+        "outputId": "0da16b32-49fc-4d26-ea6e-e5958f4b1d95",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "✅ Trovati 9 Gruppi/Client:\n",
-            "   - CSV_train/CSV_train/group1 (5 file csv)\n",
-            "   - CSV_train/CSV_train/group3 (5 file csv)\n",
-            "   - CSV_train/CSV_train/group4 (5 file csv)\n",
-            "   - CSV_train/CSV_train/group2 (5 file csv)\n",
-            "   - CSV_train/CSV_train/group0 (5 file csv)\n",
-            "   - CSV_train/CSV_train/group6 (5 file csv)\n",
-            "   - CSV_train/CSV_train/group7 (5 file csv)\n",
-            "   - CSV_train/CSV_train/group5 (5 file csv)\n",
-            "   - CSV_train/CSV_train/group8 (5 file csv)\n",
+            "   - CSV_train/CSV_train/CSV_train/group6 (5 file csv)\n",
+            "   - CSV_train/CSV_train/CSV_train/group2 (5 file csv)\n",
+            "   - CSV_train/CSV_train/CSV_train/group1 (5 file csv)\n",
+            "   - CSV_train/CSV_train/CSV_train/group4 (5 file csv)\n",
+            "   - CSV_train/CSV_train/CSV_train/group5 (5 file csv)\n",
+            "   - CSV_train/CSV_train/CSV_train/group8 (5 file csv)\n",
+            "   - CSV_train/CSV_train/CSV_train/group3 (5 file csv)\n",
+            "   - CSV_train/CSV_train/CSV_train/group7 (5 file csv)\n",
+            "   - CSV_train/CSV_train/CSV_train/group0 (5 file csv)\n",
             "\n",
             "Analisi dimensioni input...\n",
             "Dimensioni Feature Input: 18\n",
@@ -392,49 +397,49 @@
             "Inizio Training Federato...\n",
             "\n",
             "--- Round 1/15 ---\n",
-            "   >>> Loss di Validazione Media (Global): 5786.79\n",
+            "   >>> Loss di Validazione Media (Global): 5496.68\n",
             "\n",
             "--- Round 2/15 ---\n",
-            "   >>> Loss di Validazione Media (Global): 5197.73\n",
+            "   >>> Loss di Validazione Media (Global): 4786.72\n",
             "\n",
             "--- Round 3/15 ---\n",
-            "   >>> Loss di Validazione Media (Global): 4049.89\n",
+            "   >>> Loss di Validazione Media (Global): 3483.34\n",
             "\n",
             "--- Round 4/15 ---\n",
-            "   >>> Loss di Validazione Media (Global): 2427.88\n",
+            "   >>> Loss di Validazione Media (Global): 2009.66\n",
             "\n",
             "--- Round 5/15 ---\n",
-            "   >>> Loss di Validazione Media (Global): 1304.96\n",
+            "   >>> Loss di Validazione Media (Global): 1337.81\n",
             "\n",
             "--- Round 6/15 ---\n",
-            "   >>> Loss di Validazione Media (Global): 974.91\n",
+            "   >>> Loss di Validazione Media (Global): 1153.46\n",
             "\n",
             "--- Round 7/15 ---\n",
-            "   >>> Loss di Validazione Media (Global): 857.84\n",
+            "   >>> Loss di Validazione Media (Global): 1043.68\n",
             "\n",
             "--- Round 8/15 ---\n",
-            "   >>> Loss di Validazione Media (Global): 815.10\n",
+            "   >>> Loss di Validazione Media (Global): 968.86\n",
             "\n",
             "--- Round 9/15 ---\n",
-            "   >>> Loss di Validazione Media (Global): 741.84\n",
+            "   >>> Loss di Validazione Media (Global): 906.17\n",
             "\n",
             "--- Round 10/15 ---\n",
-            "   >>> Loss di Validazione Media (Global): 720.75\n",
+            "   >>> Loss di Validazione Media (Global): 846.76\n",
             "\n",
             "--- Round 11/15 ---\n",
-            "   >>> Loss di Validazione Media (Global): 680.79\n",
+            "   >>> Loss di Validazione Media (Global): 811.86\n",
             "\n",
             "--- Round 12/15 ---\n",
-            "   >>> Loss di Validazione Media (Global): 672.67\n",
+            "   >>> Loss di Validazione Media (Global): 772.97\n",
             "\n",
             "--- Round 13/15 ---\n",
-            "   >>> Loss di Validazione Media (Global): 632.00\n",
+            "   >>> Loss di Validazione Media (Global): 764.91\n",
             "\n",
             "--- Round 14/15 ---\n",
-            "   >>> Loss di Validazione Media (Global): 621.33\n",
+            "   >>> Loss di Validazione Media (Global): 724.78\n",
             "\n",
             "--- Round 15/15 ---\n",
-            "   >>> Loss di Validazione Media (Global): 616.29\n"
+            "   >>> Loss di Validazione Media (Global): 691.91\n"
           ]
         }
       ]
@@ -473,9 +478,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "02e31a80-638e-457a-e269-995e832fd35a"
+        "outputId": "ce150980-9bab-416a-e442-5206d6cd0a25"
       },
-      "execution_count": 24,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,14 +488,14 @@
           "text": [
             "\n",
             "Generazione predizioni per x_test.csv...\n",
-            "\u001b[1m6/6\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 18ms/step\n",
+            "\u001b[1m6/6\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 13ms/step\n",
             "File 'submission.csv' pronto per il download!\n",
             "   id      label\n",
-            "0   0  84.308388\n",
-            "1   1  72.784363\n",
-            "2   2  72.416115\n",
-            "3   3  77.850410\n",
-            "4   4  75.255302\n"
+            "0   0  82.288399\n",
+            "1   1  69.788155\n",
+            "2   2  72.040764\n",
+            "3   3  74.993156\n",
+            "4   4  72.015923\n"
           ]
         }
       ]
